--- a/repo/nebula/dependencies.properties
+++ b/repo/nebula/dependencies.properties
@@ -5,5 +5,6 @@ com.google.testing.compile:compile-testing = 0.8
 com.google.truth:truth = 0.28
 com.squareup:javapoet = 1.5.1
 junit:junit = 4.12
+net.sf.jopt-simple:jopt-simple = 4.9
 org.mockito:mockito-core = 1.10.19
 org.threeten:threeten-extra = 0.9
